# lotr-sdk

./: .gitignore  README.md  design.md  pyproject.toml
examples/: README.md  async_example.py  sync_example.py
src/lotr_sdk/: __init__.py  lotr.py  types.py
src/lotr_sdk/client/: base.py  httpx.py
src/lotr_sdk/core/: errors.py  settings.py
src/lotr_sdk/schemas/: __init__.py  base.py  movie.py  quote.py
src/lotr_sdk/services/: movie.py  quote.py
tests/: conftest.py  run_tests.sh
tests/integration/: test_api_integration.py  test_error_handling.py  test_real_api.py
tests/unit/: test_field_filter.py  test_lotr.py  test_movie_service.py  test_pagination.py  test_quote_service.py  test_settings.py
