[project]
name = "lotr-sdk"
version = "0.1.0"
description = "SDK for the Lord of the Rings API from https://the-one-api.dev/"
readme = "README.md"
authors = [{ name = "Artur Spatari", email = "artur.spatari@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "devtools>=0.12.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.6.3", # Latest stable version
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PL",  # pylint
    "RUF", # ruff-specific rules
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PIE", # flake8-pie
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=lotr_sdk"
